--- a/admin/products/edit-product.html
+++ b/admin/products/edit-product.html
@@ -53,9 +53,12 @@
     </section>
   </main>
 
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
+
   <script src="../../firebase_conf.js"></script>
+  
   <script src="product.js"></script>
 </body>
 </html>
